fixed layout bug

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -154,8 +154,9 @@ a.alt {
 }
 
 .home-nav-bar {
-  text-align: center;
-  flex: 1;
+  ul {
+    text-align: center;
+  }
 
   .ant-menu.ant-menu-dark,
   .ant-menu-dark .ant-menu-sub {
